package pwngs.protocol.worldsrv;message STencentUserInfo{    required string platform = 1;        required bool is_blue_vip = 2;    required bool is_blue_year_vip = 3;    required bool is_super_blue_vip = 4;    required int32 blue_vip_level = 5;         required bool is_yellow_vip = 6;    required bool is_yellow_year_vip = 7;    required bool is_super_yellow_vip = 8;    required int32 yellow_vip_level = 9; 		required int32 tgp_level = 10;}message SMagicIntensify{    required int32 LevelPencent = 1;     required int32 LevelValue = 2;      required int32 LevelAddition = 3; }message SMagicType{    required int32 id = 1;	required int32 loc = 2;    required SMagicIntensify intensify = 3;	required int64 exp = 4;    required int32 level = 5;	required int32 open_level = 6;	required int64 combat_point = 7;};message SVector3{	required float x = 1;	required float y = 2;	required float z = 3;}message SAura{	required int64 id = 1;	required int64 caster = 2;	required int64 owner = 3;	required int32 type = 5;	required int32 overlap_num = 6;	required int64 duration = 7; 	required int32 param = 8;    required int32 level = 9;}message SMotion{	required int32 motion_type = 1;	optional int64 motion_target = 2;	optional SVector3 motion_orientation = 3;	optional SVector3 motion_position = 4;	repeated SVector3 motion_path = 5;	optional float param = 6; }message SStageInfo{	required int64 id = 1;	required bytes scene = 2;	required bytes scene_navmesh = 3;	required bytes scene_info = 4;}message SItemModAttr{	required int32 mod = 1;						required int32 type = 2;					required float value = 3;				}message SItemModTrig{	required int32 mod = 1;	repeated float params = 2;}message SCombatPoint{	required float zs_point = 1;	required float gs_point = 2;	required float fs_point = 3;}message SItemFashionParts{	required int32 idx = 1;	required int32 enhance_lv = 2;}message SItemWing{	required int32 exp = 1;	required int32 star = 2;	required int32 level = 3;	required int32 step = 4;	required int32 equip_step = 5;	required int32 luck = 6;}message SItemEquip{	required int32 color = 1;	required int32 level = 2;	required int32 use_level = 3;	optional int32 star_level = 4;	optional int32 enchant_level = 5;	repeated SItemModAttr basics_attr = 6;	repeated SItemModAttr extends_attr = 7;	optional SItemModAttr special_attr = 8;		optional SItemModTrig special_trig = 9;	repeated SItemFashionParts fashion_parts = 10;	optional SItemWing wing = 11;	optional int32 skill_id = 12;}message SItemRune{	required int32 exp = 1;					}message SItemBless{	repeated SItemModAttr mod_attrs = 1;	}message SItemEgg{	required float aptitude = 1;				required float fire_dmg = 2;				required float cold_dmg = 3;				required float light_dmg = 4;				required float poison_dmg = 5;				required float fire_res = 6;				required float cold_res = 7;				required float light_res = 8;				required float poison_res = 9;				required float grow_rate = 10;				required float grow_rate_limit = 11;		required float con_rate = 12;				required float con_rate_limit = 13;		}message SItemEquipRune{	repeated SItemModAttr mod_attrs = 1;	}message SItemBloodGobm{	required int32 level = 1;	required int32 exp = 2;	required int32 active_type = 3;	required int32 active_param1 = 4;	required int32 active_param2 = 5;}message SEquipIndexGem{	required int32 equip_index = 1;	repeated SItem gems = 2;	}message SItemHPMP{	required int32 used_val = 1;	required int32 total_val = 2;}message SItem{	required int64 item_id = 1;					required int32 item_type = 2;				required int32 item_count = 3;				required int32 item_bag = 4;				required int32 item_position = 5;			required int64 item_flags = 6;				required int64 expired_time = 7;	optional int64 item_price = 8;	optional SItemEquip equip_attrs = 9;		optional SItemBless bless_attrs = 10;		optional SItemEgg egg_attrs = 11;		optional SItemBloodGobm gobm_attrs = 12;	optional SCombatPoint combat_point = 13;	optional SItemHPMP hpmp_attrs = 14;}message SItemPrice{	required int32 tid = 1;	required int32 price = 2;}message SPackItem{	required int32 tid = 1;						required int32 count = 2;				}message SRandomItem{	required int32 random_item_type = 1;		required SPackItem pack_item = 2;								}